--- a/fe/src/styles/globals.css
+++ b/fe/src/styles/globals.css
@@ -17,14 +17,9 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+  font-family:
+    'Pretendard Variable',
+    Pretendard,}
 
 @layer utilities {
   .text-balance {
