--- a/fe/src/styles/globals.css
+++ b/fe/src/styles/globals.css
@@ -17,6 +17,7 @@
 }
 
 body {
+  @apply text-textColor;
   font-family:
     'Pretendard Variable',
     Pretendard,}
@@ -25,4 +26,9 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+
+  .gradient-circle {
+    background: linear-gradient(157deg, rgba(205, 250, 250, 0.30) 8.58%, rgba(205, 250, 250, 0.00) 51.24%);
+  }
 }
+
