--- a/fe/src/styles/globals.css
+++ b/fe/src/styles/globals.css
@@ -4,8 +4,8 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-start-rgb: 255, 255, 255; 
+  --background-end-rgb: 255, 255, 255; 
 }
 
 @media (prefers-color-scheme: dark) {
@@ -16,19 +16,52 @@
   }
 }
 
+html, body {
+  font-family: 'Pretendard Variable', Pretendard, sans-serif; 
+  margin: 0; 
+  padding: 0; 
+  background: linear-gradient(
+    to bottom,
+    rgb(var(--background-start-rgb)),
+    rgb(var(--background-end-rgb))
+  ); 
+  color: rgb(var(--foreground-rgb)); 
+  min-height: 100vh; 
+  overflow-x: hidden; 
+  overflow-y: scroll; 
+}
+
+/* 스크롤바를 숨기거나 투명하게 설정 */
+::-webkit-scrollbar {
+  width: 0; /* 스크롤바 너비를 0으로 설정하여 숨기기 */
+  background: transparent; /* 스크롤바 배경을 투명하게 설정 */
+}
+
+::-webkit-scrollbar-thumb {
+  background: transparent; /* 스크롤바 핸들 색상도 투명하게 설정 */
+}
+
+/* Firefox 및 기타 브라우저에서 스크롤바 숨기기 */
+body {
+  scrollbar-width: none; /* Firefox에서 스크롤바 숨기기 */
+}
+
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari에서 스크롤바 숨기기 */
+}
+
+/* 추가된 스타일 */
 body {
   @apply text-textColor;
-  font-family:
-    'Pretendard Variable',
-    Pretendard,}
+  font-family: 'Pretendard Variable', Pretendard;
+}
 
 @layer utilities {
   .text-balance {
-    text-wrap: balance;
+    text-wrap: balance; /* 텍스트 균형 맞추기 */
   }
 
   .gradient-circle {
     background: linear-gradient(157deg, rgba(205, 250, 250, 0.30) 8.58%, rgba(205, 250, 250, 0.00) 51.24%);
   }
 }
-
