--- a/fe/src/styles/globals.css
+++ b/fe/src/styles/globals.css
@@ -3,10 +3,13 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+* {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 255, 255, 255; 
   --background-end-rgb: 255, 255, 255;
+  --rdp-accent-color: indigo;
+  --rdp-background-color: gray;
+  --rdp-selected-color : gray
 }
 html,
 body {
