--- a/fe/src/styles/globals.css
+++ b/fe/src/styles/globals.css
@@ -8,7 +8,7 @@
   --background-end-rgb: 255, 255, 255;
   --rdp-accent-color: indigo;
   --rdp-background-color: gray;
-  --rdp-selected-color : gray
+  --rdp-selected-color: gray;
 }
 html,
 body {
